                         CHANGES version 2.10.7

              This file summarizes changes made since 1.0
              
Version 2.10.7
--------------
* Fixes: Using the configure flag --with-sqlite without aruguments
  now works as expected. Thanks to Johan Bergström for bug report
  
* Fixes: --enable-profiling removes any optimization compiler
  flags that might have been set apriori. Thanks to Johan Bergström 
  for bug report


Version 2.10.6
--------------
* New: ConnectionPool_start() now throws an SQLException instead
  of calling ABORT if starting the pool failed. Thanks to
  Christopher O'Hara for suggestion.
* Fixes: MySQL: Using a stored procedure which returned a
  result set would freeze the connection until it was reaped.
  Thanks to Jesse White for patch.
* Fixes: Ensure that the library can be restarted after it was 
  stopped without leaking resources. Only applicable for MySQL
  which could leak memory on runtime restart. Thanks to Axel 
  Steiner for initial patch and suggestion.

Version 2.10.5
--------------
* New: Automatically unescape the following URL components:
  credentials, path and parameter values.

Version 2.10.4
--------------
* MySQL: Improved error reporting for select and prepared statements

Version 2.10.3
--------------
Bug fixes: Oracle: fixed a compile issue for GCC when strict
C99 is used. Thanks to Stas Oginsky.

Version 2.10.2
--------------
Bug fixes: Oracle: fixed a parameter sequence bug at
connection. Bug was introduced in 2.9. Thanks to l00106600.

Version 2.10.1
--------------
* A zdb.pc library package config file was added. Thanks to 
  Matthieu Verbert
* Build, configure and minor code improvements

Version 2.10
-----------
* Libzdb is now compatible with and can be included in C++ or 
  Objective-C(++) projects.
* Internal optimizing changes and improvements

Version 2.9
-----------
* SQLite: Unescape path to allow for (white-)space in database file
  path. Thanks to Jonas Schnelli